--- a/requirements.txt
+++ b/requirements.txt
@@ -29,17 +29,17 @@ kiwisolver==1.1.0
 Mako==1.0.12
 MarkupSafe==1.1.1
 marshmallow==2.19.5
-matplotlib==3.1.0
+matplotlib>=3.1.0
 mizani==0.5.4
 more-itertools==8.0.2
-numpy==1.16.4
+numpy>=1.16.4
 packaging==19.2
 palettable==3.1.1
-pandas==0.24.2
+pandas>=0.24.2
 patsy==0.5.1
 plotnine==0.5.1
 pluggy==0.13.1
-psycopg2==2.8.3
+psycopg2>=2.8.3
 py==1.8.0
 PyJWT==1.7.1
 pyparsing==2.4.0
@@ -51,14 +51,14 @@ pytz==2019.1
 PyYAML==5.1.1
 redis==3.3.11
 requests==2.22.0
-scipy==1.3.0
+scipy>=1.3.0
 six==1.12.0
 SQLAlchemy==1.3.5
-statsmodels==0.10.0
+statsmodels>=0.10.0
 urllib3==1.25.3
 validate-email==1.3
 visitor==0.1.3
 wcwidth==0.1.7
-Werkzeug==0.15.4
+Werkzeug==0.16
 WTForms==2.2.1
 zipp==0.6.0
